backend/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: afrilumina-backend-svc
spec:
  selector:
    app: afrilumina-backend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
